// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`表单 card模式 1`] = `
<body>
  <div>
    <div
      class="space vertical"
      style="line-height: 1; align-self: stretch; box-sizing: border-box; background-color: rgb(255, 255, 255); border-radius: 10px; padding-left: 10px; padding-right: 10px; box-shadow: 0 0 10px rgba(39,128,217, 0.15);"
    >
      <div
        class="space vertical"
        style="line-height: 1;"
      >
        <div
          class="item card"
        >
          <div
            class="labelWrap"
          >
            <div
              class="mark"
              style="opacity: 0;"
            >
              *
            </div>
            <div
              class="label"
              style="justify-content: flex-end;"
            >
              <div
                style="width: 1em;"
              >
                姓
              </div>
              <div
                style="width: 1em;"
              >
                名
              </div>
            </div>
            <div
              class="colon"
            >
              :
            </div>
          </div>
          <div
            class="children cell-children-left"
            style="justify-content: flex-start;"
          >
            <input
              class="web input"
              placeholder="请输入姓名"
              placeholderstyle="[object Object]"
              toutiao-selection-end="999"
              toutiao-selection-start="999"
              value=""
              wechat-confirm-type="done"
              wechat-cursor-spacing="0"
              wechat-placeholder-class="input-placeholder"
              wechat-selection-end="-1"
              wechat-selection-start="-1"
            />
          </div>
          <div
            class="after"
            style="display: none;"
          />
        </div>
        <div
          class="item card"
          style="border-bottom: 0;"
        >
          <div
            class="labelWrap"
          >
            <div
              class="mark"
              style="opacity: 1;"
            >
              *
            </div>
            <div
              class="label"
              style="justify-content: flex-end;"
            >
              <div
                style="width: 1em;"
              >
                手
              </div>
              <div
                style="width: 1em;"
              >
                机
              </div>
              <div
                style="width: 1em;"
              >
                号
              </div>
            </div>
            <div
              class="colon"
            >
              :
            </div>
          </div>
          <div
            class="children cell-children-left"
            style="justify-content: flex-start;"
          >
            <input
              class="web input"
              placeholder="请输入手机号"
              placeholderstyle="[object Object]"
              toutiao-selection-end="999"
              toutiao-selection-start="999"
              value=""
              wechat-confirm-type="done"
              wechat-cursor-spacing="0"
              wechat-placeholder-class="input-placeholder"
              wechat-selection-end="-1"
              wechat-selection-start="-1"
            />
          </div>
          <div
            class="after"
            style="display: none;"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`表单 cell模式 1`] = `
<body>
  <div>
    <div
      class="space vertical"
      style="line-height: 1; align-self: stretch; box-sizing: border-box; background-color: rgb(255, 255, 255); border-radius: 10px; padding-left: 10px; padding-right: 10px; box-shadow: 0 0 10px rgba(39,128,217, 0.15);"
    >
      <div
        class="space vertical"
        style="line-height: 1;"
      >
        <div
          class="item cell"
        >
          <div
            class="labelWrap"
          >
            <div
              class="mark"
              style="opacity: 0;"
            >
              *
            </div>
            <div
              class="label cell-label"
              style="justify-content: flex-end;"
            >
              <div
                style="width: 1em;"
              >
                姓
              </div>
              <div
                style="width: 1em;"
              >
                名
              </div>
            </div>
          </div>
          <div
            class="children cell-children"
            style="justify-content: flex-end;"
          >
            <input
              class="web input"
              placeholder="请输入姓名"
              placeholderstyle="[object Object]"
              toutiao-selection-end="999"
              toutiao-selection-start="999"
              value=""
              wechat-confirm-type="done"
              wechat-cursor-spacing="0"
              wechat-placeholder-class="input-placeholder"
              wechat-selection-end="-1"
              wechat-selection-start="-1"
            />
          </div>
          <div
            class="after"
            style="display: none;"
          />
        </div>
        <div
          class="item cell"
          style="border-bottom: 0;"
        >
          <div
            class="labelWrap"
          >
            <div
              class="mark"
              style="opacity: 1;"
            >
              *
            </div>
            <div
              class="label cell-label"
              style="justify-content: flex-end;"
            >
              <div
                style="width: 1em;"
              >
                手
              </div>
              <div
                style="width: 1em;"
              >
                机
              </div>
              <div
                style="width: 1em;"
              >
                号
              </div>
            </div>
          </div>
          <div
            class="children cell-children"
            style="justify-content: flex-end;"
          >
            <input
              class="web input"
              placeholder="请输入手机号"
              placeholderstyle="[object Object]"
              toutiao-selection-end="999"
              toutiao-selection-start="999"
              value=""
              wechat-confirm-type="done"
              wechat-cursor-spacing="0"
              wechat-placeholder-class="input-placeholder"
              wechat-selection-end="-1"
              wechat-selection-start="-1"
            />
          </div>
          <div
            class="after"
            style="display: none;"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`表单 两端对齐 1`] = `
<body>
  <div>
    <div
      class="space vertical"
      style="line-height: 1; align-self: stretch;"
    >
      <div
        class="space vertical"
        style="line-height: 1;"
      >
        <div
          class="item"
        >
          <div
            class="labelWrap"
          >
            <div
              class="mark"
              style="opacity: 0;"
            >
              *
            </div>
            <div
              class="label"
              style="width: 3em; justify-content: space-between;"
            >
              <div
                style="width: 1em;"
              >
                姓
              </div>
              <div
                style="width: 1em;"
              >
                名
              </div>
            </div>
            <div
              class="colon"
            >
              :
            </div>
          </div>
          <div
            class="children cell-children-left"
            style="justify-content: flex-start;"
          >
            <input
              class="web input"
              placeholder="请输入姓名"
              placeholderstyle="[object Object]"
              toutiao-selection-end="999"
              toutiao-selection-start="999"
              value=""
              wechat-confirm-type="done"
              wechat-cursor-spacing="0"
              wechat-placeholder-class="input-placeholder"
              wechat-selection-end="-1"
              wechat-selection-start="-1"
            />
          </div>
          <div
            class="after"
            style="display: none;"
          />
        </div>
        <div
          class="item"
          style="border-bottom: 0;"
        >
          <div
            class="labelWrap"
          >
            <div
              class="mark"
              style="opacity: 1;"
            >
              *
            </div>
            <div
              class="label"
              style="width: 3em; justify-content: space-between;"
            >
              <div
                style="width: 1em;"
              >
                手
              </div>
              <div
                style="width: 1em;"
              >
                机
              </div>
              <div
                style="width: 1em;"
              >
                号
              </div>
            </div>
            <div
              class="colon"
            >
              :
            </div>
          </div>
          <div
            class="children cell-children-left"
            style="justify-content: flex-start;"
          >
            <input
              class="web input"
              placeholder="请输入手机号"
              placeholderstyle="[object Object]"
              toutiao-selection-end="999"
              toutiao-selection-start="999"
              value=""
              wechat-confirm-type="done"
              wechat-cursor-spacing="0"
              wechat-placeholder-class="input-placeholder"
              wechat-selection-end="-1"
              wechat-selection-start="-1"
            />
          </div>
          <div
            class="after"
            style="display: none;"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`表单 渲染 1`] = `
<body>
  <div>
    <div
      class="space vertical"
      style="line-height: 1; align-self: stretch;"
    >
      <div
        class="space vertical"
        style="line-height: 1;"
      >
        <div
          class="item"
        >
          <div
            class="labelWrap"
          >
            <div
              class="mark"
              style="opacity: 0;"
            >
              *
            </div>
            <div
              class="label"
              style="justify-content: flex-end;"
            >
              <div
                style="width: 1em;"
              >
                姓
              </div>
              <div
                style="width: 1em;"
              >
                名
              </div>
            </div>
            <div
              class="colon"
            >
              :
            </div>
          </div>
          <div
            class="children cell-children-left"
            style="justify-content: flex-start;"
          >
            <input
              class="web input"
              placeholder="请输入姓名"
              placeholderstyle="[object Object]"
              toutiao-selection-end="999"
              toutiao-selection-start="999"
              value=""
              wechat-confirm-type="done"
              wechat-cursor-spacing="0"
              wechat-placeholder-class="input-placeholder"
              wechat-selection-end="-1"
              wechat-selection-start="-1"
            />
          </div>
          <div
            class="after"
            style="display: none;"
          />
        </div>
        <div
          class="item"
          style="border-bottom: 0;"
        >
          <div
            class="labelWrap"
          >
            <div
              class="mark"
              style="opacity: 1;"
            >
              *
            </div>
            <div
              class="label"
              style="justify-content: flex-end;"
            >
              <div
                style="width: 1em;"
              >
                手
              </div>
              <div
                style="width: 1em;"
              >
                机
              </div>
              <div
                style="width: 1em;"
              >
                号
              </div>
            </div>
            <div
              class="colon"
            >
              :
            </div>
          </div>
          <div
            class="children cell-children-left"
            style="justify-content: flex-start;"
          >
            <input
              class="web input"
              placeholder="请输入手机号"
              placeholderstyle="[object Object]"
              toutiao-selection-end="999"
              toutiao-selection-start="999"
              value=""
              wechat-confirm-type="done"
              wechat-cursor-spacing="0"
              wechat-placeholder-class="input-placeholder"
              wechat-selection-end="-1"
              wechat-selection-start="-1"
            />
          </div>
          <div
            class="after"
            style="display: none;"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
